Fixed the single theme image overlay spacing

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -267,6 +267,9 @@ p.uk-article-lead.tm-excerpt {
         font-size: 30px;
         font-weight: 600;
     }
+    .uk-overlay-panel {
+        padding: 0;
+    }
 }
 li.tm-divider {
     border-bottom: 1px solid rgba(138, 132, 119, 0.27);
